Added og data to head and move stuff around

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <title>{{ title }} - {{ site.title }}</title>
     <meta name="description" content="makkusu.dev - Maximilian Boll, frontend web-developer in Mainz/Germany">
     <meta name="robots" content="INDEX,FOLLOW">
     <meta http-equiv="content-Language" content="en">
@@ -12,8 +11,25 @@
     <meta name="author" content="Maximilian Boll">
     <meta name="generator" content="Eleventy">
 
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.makkusu.dev/">
+    <meta property="og:site_name" content="makkusu.dev">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:title" content="makkusu.dev - Maximilian Boll, frontend web-developer in Mainz/Germany">
+    <meta property="og:description" content="makkusu.dev - Maximilian Boll, frontend web-developer in Mainz/Germany">
+    <meta property="og:image" content="https://www.makkusu.dev/assets/images/avatar.jpg">
+    <meta property="og:image:width" content="500">
+    <meta property="og:image:height" content="500">
+    <meta property="og:image:alt" content="Avatar of Maximilian Boll">
+
+    <!-- Feeds -->
+    <link rel="alternate" href="/feed.xml" title="makkusu.dev Blog" type="application/atom+xml">
+
+    <!-- Preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
+    <!-- Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/images/favicons/apple-touch-icon.png' | url }}">
     <link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/images/favicons/favicon-32x32.png' | url }}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/images/favicons/favicon-16x16.png' | url }}">
@@ -25,8 +41,6 @@
     <meta name="msapplication-TileColor" content="{{ accentcolor }}">
     <meta name="msapplication-config" content="{{ '/assets/images/favicons/browserconfig.xml' | url }}">
     <meta name="theme-color" content="{{ accentcolor }}">
-
-    <title>{{ title }} - {{ site.title }}</title>
 
     <link rel="stylesheet" href="{{ '/assets/stylesheets/application.min.css' | url }}?v={{ site.builtAt }}" media="screen">
     <link rel="preload" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
