--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -16,8 +16,8 @@
     <meta property="og:url" content="https://www.makkusu.dev/">
     <meta property="og:site_name" content="makkusu.dev">
     <meta property="og:locale" content="en_US">
-    <meta property="og:title" content="makkusu.dev - Maximilian Boll, frontend web-developer in Mainz/Germany">
-    <meta property="og:description" content="makkusu.dev - Maximilian Boll, frontend web-developer in Mainz/Germany">
+    <meta property="og:title" content="Maximilian Boll - Frontend Web-Developer">
+    <meta property="og:description" content="{{ title }}">
     <meta property="og:image" content="https://www.makkusu.dev/assets/images/avatar.jpg">
     <meta property="og:image:width" content="500">
     <meta property="og:image:height" content="500">
