style: replaced twitter with x

--- a/src/beacons.njk
+++ b/src/beacons.njk
@@ -7,7 +7,7 @@ topbar: false
     <div class="beacons__box">
         <a href="https://twitch.tv/4lienb0y" class="beacons__beacon"><span class="fa-brands fa-twitch" style="--color:#6441A4"></span> @4lienb0y</a>
         <a href="https://instagram.com/maxvowinkel" class="beacons__beacon beacons__beacon--highlight"><span class="fa-brands fa-instagram" style="--color:#E1306C"></span> @maxvowinkel</a>
-        <a href="https://twitter.com/MyXoToD" class="beacons__beacon"><span class="fa-brands fa-twitter" style="--color:#1DA1F2"></span> @MyXoToD</a>
+        <a href="https://x.com/MyXoToD" class="beacons__beacon"><span class="fa-brands fa-x-twitter"></span> @MyXoToD</a>
         <a href="https://www.youtube.com/user/MyXoToD" class="beacons__beacon"><span class="fa-brands fa-youtube" style="--color:#FF0000"></span> @MyXoToD</a>
         <a href="https://open.spotify.com/user/1145610126?si=c5f118e34d8941f4" class="beacons__beacon"><span class="fa-brands fa-spotify" style="--color:#1DB954"></span> @Max</a>
         <a href="https://stackoverflow.com/users/2783423/myxotod" class="beacons__beacon"><span class="fa-brands fa-stack-overflow" style="--color:#F48024"></span> @MyXoToD</a>
