--- a/src/imprint.njk
+++ b/src/imprint.njk
@@ -16,7 +16,7 @@ sitemap:
     Maximilian Boll<br />
     Mainz, Germany<br />
     Mail: <a href="mailto:legal@makkusu.dev" rel="nofollow">legal@makkusu.dev</a><br />
-    Twitter: <a href="https://twitter.com/MyXoToD" target="_blank" rel="nofollow">@MyXoToD</a>
+    X: <a href="https://x.com/MyXoToD" target="_blank" rel="nofollow">@MyXoToD</a>
   </p>
 
   <hr>
