content: added dev friend links

--- a/src/about.njk
+++ b/src/about.njk
@@ -38,6 +38,15 @@ sitemap:
             <div class="tag">MySQL</div>
           </div>
         </li>
+        <li>
+          Dev Friends<br>
+          <div class="tags" style="margin-top: .5rem;">
+            <a href="https://sirtetris.com/" class="tag" target="_blank" rel="nofollow">Tarek</a>
+            <a href="https://lucasbonomi.com/" class="tag" target="_blank" rel="nofollow">Lucas</a>
+            <a href="https://kevin.gimbel.dev/ops/" class="tag" target="_blank" rel="nofollow">Kevin</a>
+            <a href="https://nerddis.co/" class="tag" target="_blank" rel="nofollow">Tim</a>
+          </div>
+        </li>
       </ul>
     </div>
   </div>
