content: updated meta data

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - {{ site.title }}</title>
-    <meta name="description" content="makkusu.dev - Maximilian Boll, frontend web-developer in Mainz/Germany">
+    <meta name="description" content="Maximilian Boll - Frontend Web-Developer in Mainz/Germany - makkusu.dev">
     <meta name="robots" content="INDEX,FOLLOW">
     <meta http-equiv="content-Language" content="en">
     <meta name="keywords" content="maximilian boll, web developer, frontend developer, javascript, typescript, japanese, angular, eleventy">
