updated light theme about image

--- a/src/about.njk
+++ b/src/about.njk
@@ -11,13 +11,16 @@ sitemap:
       <div class="about-image">
         <img src="/assets/images/max.webp" alt="Maximilian Boll">
       </div>
+      <div class="about-image about-image--light">
+        <img src="/assets/images/max-light.webp" alt="Maximilian Boll">
+      </div>
     </div>
     <div class="grid__col-12 grid__col-8-sm grid__col-7-md grid__col--vcentered">
       <h3>Hi, my name is</h3>
       <h1 style="font-family:var(--ff-sans); font-weight: 900">Maximilian Boll</h1>
       <p>I’m a German based web-developer, <span class="age">??</span> years old and living in the beautiful city of Mainz.</p>
-      <p>Besides programming web-applications and games I do a lot of other things. You can read more about my <a href="{{ '/hobbies' | url }}">hobbies over here</a>.</p>
-      <p>Feel free to wander around or drop me a message if you have any questions. You can find my socials on my <a href="{{ '/beacons' | url }}">beacons page</a>.</p>
+      <p>Besides programming web-applications and games I do a lot of other things. You can read more about my <a href="{{ '/hobbies/' | url }}">hobbies over here</a>.</p>
+      <p>Feel free to wander around or drop me a message if you have any questions. You can find my socials on my <a href="{{ '/beacons/' | url }}">beacons page</a>.</p>
       <ul>
         <li>
           Speaking<br>
