--- a/src/index.njk
+++ b/src/index.njk
@@ -8,15 +8,15 @@ sitemap:
 
 <div class="hub">
     <div class="hub__col hub__col--wide">
-        <a href="{{ '/about' | url }}" class="hub__link" data-kanji="1">About</a>
-        <a href="{{ '/hobbies' | url }}" class="hub__link" data-kanji="2">Hobbies</a>
+        <a href="{{ '/about/' | url }}" class="hub__link" data-kanji="1">About</a>
+        <a href="{{ '/hobbies/' | url }}" class="hub__link" data-kanji="2">Hobbies</a>
     </div>
     <div class="hub__col">
         <div class="hub__title">マックス<span>.dev</span></div>
     </div>
     <div class="hub__col hub__col--wide">
-        <a href="{{ '/blog' | url }}" class="hub__link" data-kanji="3">Blog</a>
-        <a href="{{ '/coding' | url }}" class="hub__link" data-kanji="4">Coding</a>
+        <a href="{{ '/blog/' | url }}" class="hub__link" data-kanji="3">Blog</a>
+        <a href="{{ '/coding/' | url }}" class="hub__link" data-kanji="4">Coding</a>
     </div>
     
     <div class="hub__kanji" data-kanji="1">私</div>
