--- a/src/tag.njk
+++ b/src/tag.njk
@@ -15,7 +15,7 @@ sitemap:
 <div class="content content--wide">
   <h1>{{ tag }} posts</h1>
 
-  <p>{{ taglist.length }} posts in this category. <a href="{{ '/blog' | url }}">All tags &raquo;</a></p>
+  <p>{{ taglist.length }} posts in this category. <a href="{{ '/blog/' | url }}">All tags &raquo;</a></p>
   
   <br>
   <br>
