--- a/src/_includes/topbar.njk
+++ b/src/_includes/topbar.njk
@@ -7,10 +7,10 @@
     </label>
     <nav class="main-nav">
       <ul>
-        <li><a href="{{ '/about' | url }}" class="main-nav__link{% if menuactive == 'about' %} main-nav__link--active{% endif %}">About</a></li>
-        <li><a href="{{ '/blog' | url }}" class="main-nav__link{% if menuactive == 'blog' %} main-nav__link--active{% endif %}">Blog</a></li>
-        <li><a href="{{ '/hobbies' | url }}" class="main-nav__link{% if menuactive == 'hobbies' %} main-nav__link--active{% endif %}">Hobbies</a></li>
-        <li><a href="{{ '/coding' | url }}" class="main-nav__link{% if menuactive == 'coding' %} main-nav__link--active{% endif %}">Coding</a></li>
+        <li><a href="{{ '/about/' | url }}" class="main-nav__link{% if menuactive == 'about' %} main-nav__link--active{% endif %}">About</a></li>
+        <li><a href="{{ '/blog/' | url }}" class="main-nav__link{% if menuactive == 'blog' %} main-nav__link--active{% endif %}">Blog</a></li>
+        <li><a href="{{ '/hobbies/' | url }}" class="main-nav__link{% if menuactive == 'hobbies' %} main-nav__link--active{% endif %}">Hobbies</a></li>
+        <li><a href="{{ '/coding/' | url }}" class="main-nav__link{% if menuactive == 'coding' %} main-nav__link--active{% endif %}">Coding</a></li>
       </ul>
     </nav>
   </div>
