updated coding page layout slightly

--- a/src/_includes/post-coding.njk
+++ b/src/_includes/post-coding.njk
@@ -4,7 +4,7 @@
   {% set cover = fallbackcover %}
 {% endif %}
 
-<article class="post">
+<article class="post post--coding">
   <a href="{{ project.url | url }}" class="post__image">
     <iframe height="100%" style="width: 100%;" scrolling="no" title="{{ project.data.title }}" src="https://codepen.io/MyXoToD/embed/{{ project.data.codepen }}?default-tab=result&editable=true&theme-id=dark&data-show-tab-bar=no" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true"></iframe>
   </a>
