optimize: changed theme icons and removed fontawesome from most pages

--- a/src/_includes/theme-toggle.njk
+++ b/src/_includes/theme-toggle.njk
@@ -1,4 +1,8 @@
 <div class="theme-toggle">
-  <i class="fa-solid fa-sun"></i>
-  <i class="fa-solid fa-moon"></i>
+  <i class="icon-sun">
+    {% include '../assets/images/mode-light.svg' %}
+  </i>
+  <i class="icon-moon">
+    {% include '../assets/images/mode-dark.svg' %}
+  </i>
 </div>
