fix: html/css fixes

--- a/src/_layouts/post-coding.njk
+++ b/src/_layouts/post-coding.njk
@@ -30,6 +30,6 @@ include_prism: true
 
     {{ content | safe }}
 
-    <iframe height="100%" style="width: 100%;" scrolling="no" title="{{ title }}" src="https://codepen.io/MyXoToD/embed/{{ codepen }}?default-tab=result&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true"></iframe>
+    <iframe title="{{ title }}" src="https://codepen.io/MyXoToD/embed/{{ codepen }}?default-tab=result&editable=true&theme-id=dark" loading="lazy"></iframe>
   </article>
 </div>
