--- a/src/_includes/post-coding.njk
+++ b/src/_includes/post-coding.njk
@@ -5,9 +5,9 @@
 {% endif %}
 
 <article class="post post--coding">
-  <a href="{{ project.url | url }}" class="post__image">
-    <iframe height="100%" style="width: 100%;" scrolling="no" title="{{ project.data.title }}" src="https://codepen.io/MyXoToD/embed/{{ project.data.codepen }}?default-tab=result&editable=true&theme-id=dark&data-show-tab-bar=no" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true"></iframe>
-  </a>
+  <div class="post__image">
+    <iframe title="{{ project.data.title }}" src="https://codepen.io/MyXoToD/embed/{{ project.data.codepen }}?default-tab=result&editable=true&theme-id=dark&data-show-tab-bar=no" loading="lazy"></iframe>
+  </div>
   <div class="post__data">
     <div class="post__date">{{ project.date | formatDate }}</div>
     <h2 class="post__title"><a href="{{ project.url | url }}">{{ project.data.title }}</a></h2>
