Reduced blog post max image height

--- a/src/assets/stylesheets/_post.scss
+++ b/src/assets/stylesheets/_post.scss
@@ -308,6 +308,10 @@
     text-align: center;
   }
 
+  > p > img {
+    max-height: 90vh;
+  }
+
   iframe,
   video {
     width: 100%;
@@ -315,28 +319,6 @@
     aspect-ratio: 16 / 9;
     margin: 0 auto;
     display: block;
-  }
-
-  blockquote {
-    margin-top: 2rem !important;
-    margin-bottom: 2rem !important;
-    border-left: 4px solid var(--c-accent);
-    padding: 2rem 0 2rem 2rem;
-    font-family: var(--ff-sans);
-    font-size: 1.5rem;
-    font-weight: 300;
-    position: relative;
-
-    &:after {
-      content: '”';
-      top: 0;
-      right: 0;
-      font-size: 5rem;
-      position: absolute;
-      font-weight: 900;
-      color: rgba(var(--c-copy-rgb), .1);
-      line-height: 1;
-    }
   }
 
   blockquote {
