--- a/src/coding.njk
+++ b/src/coding.njk
@@ -2,7 +2,7 @@
 title: Coding & Projects
 menuactive: coding
 pagination:
-  data: collections.coding
+  data: collections.page_coding
   size: 5
   reverse: true
   alias: projects
