Changed topbar positioning (fixes #14)

--- a/src/_layouts/base.njk
+++ b/src/_layouts/base.njk
@@ -62,7 +62,7 @@
     |__|    |__| |__|  |__| |__| \__\ |__| \__\ |________| |______| |________| |_| |_____/   |_______|     \__/
     -->
   </head>
-  <body{% if topbar %} class="topbar-space"{% endif %}>
+  <body>
     {% if topbar %}
       {% include 'topbar.njk' %}
     {% endif %}
