Adjusted position and styles of pagination (fixes #16)

--- a/src/assets/stylesheets/_pagination.scss
+++ b/src/assets/stylesheets/_pagination.scss
@@ -22,4 +22,12 @@
       opacity: 1;
     }
   }
+
+  &__link--hidden {
+    visibility: hidden;
+  }
+
+  &__link--highlight {
+    opacity: 1;
+  }
 }
