--- a/src/_includes/pagination.njk
+++ b/src/_includes/pagination.njk
@@ -1,17 +1,11 @@
 {% if pagination.pages | length > 1 %}
   <div class="pagination">
-    {% if pagination.pageNumber > 1 %}
-      <a href="{{ pagination.href.first }}" class="pagination__link">First page</a>
-    {% endif %}
-    {% if pagination.pageNumber > 0 %}
-      <a href="{{ pagination.href.previous }}" class="pagination__link">Newer posts</a>
-    {% endif %}
+    <a href="{{ pagination.href.first }}" class="pagination__link{% if pagination.pageNumber < 2 %} pagination__link--hidden{% endif %}">First page</a>
+    <a href="{{ pagination.href.previous }}" class="pagination__link pagination__link--highlight{% if pagination.pageNumber == 0 %} pagination__link--hidden{% endif %}">Newer posts</a>
+    
     <div>{{ pagination.pageNumber + 1 }} of {{ pagination.pages | length }}</div>
-    {% if pagination.pageNumber + 1 < pagination.pages | length %}
-      <a href="{{ pagination.href.next }}" class="pagination__link">Older posts</a>
-    {% endif %}
-    {% if pagination.pageNumber + 1 < pagination.pages | length - 1 %}
-      <a href="{{ pagination.href.last }}" class="pagination__link">Last page</a>
-    {% endif %}
+    
+    <a href="{{ pagination.href.next }}" class="pagination__link pagination__link--highlight{% if pagination.pageNumber == pagination.pages | length - 1 %} pagination__link--hidden{% endif %}">Older posts</a>
+    <a href="{{ pagination.href.last }}" class="pagination__link{% if pagination.pageNumber >= pagination.pages | length - 2 %} pagination__link--hidden{% endif %}">Last page</a>
   </div>
 {% endif %}
