--- a/src/index.njk
+++ b/src/index.njk
@@ -12,7 +12,7 @@ sitemap:
         <a href="{{ '/hobbies/' | url }}" class="hub__link" data-kanji="2">Hobbies</a>
     </div>
     <div class="hub__col">
-        <div class="hub__title">マックス<span>.dev</span></div>
+        <div class="hub__title"><div>マックス</div><span>.dev</span></div>
     </div>
     <div class="hub__col hub__col--wide">
         <a href="{{ '/blog/' | url }}" class="hub__link" data-kanji="3">Blog</a>
