--- a/src/blog.njk
+++ b/src/blog.njk
@@ -16,5 +16,7 @@ canonical: /blog/
     {% for post in posts %}
       {% include 'post.njk' %}
     {% endfor %}
+
+    {% include 'pagination.njk' %}
   </div>
 </div>
